fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -145,8 +145,8 @@ input[name="payment-option"] {
 
 .plan-card-container {
   display: flex;
-  justify-content: center;
-  gap: 57px;
+  justify-content: space-between;
+  gap: 50px;
   flex-wrap: wrap;
 }
 
@@ -244,7 +244,7 @@ input[name="payment-option"] {
 
 .card-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
   gap: 50px;
